tests/paczka1/small_fuzzy/58398364.err
Error in line 3: VnFxjNes A417 34,5
Error in line 5: 7n1sZ S405 46,8
